fixed a bug
on mobile, the banner image was too big, which made it possible to scroll horizontally

--- a/theme/css/breaks/titelbild-mobile.css
+++ b/theme/css/breaks/titelbild-mobile.css
@@ -4,8 +4,9 @@
     max-height: unset !important;
 }
 
-#titelbild .field__item {
-    width: unset;
+#titelbild {
+    margin-left: -5.5%; 
+    width: 111%;
 }
 
 #block-gcmofficial-page-title,
